--- a/$57987574573498774343/rpsidb.html
+++ b/$57987574573498774343/rpsidb.html
@@ -38,6 +38,7 @@
       <p>Email: 443465731@kingswoodhs.nsw.edu.au </p>
       <p>Personal Email: christiansaboungi0@gmail.com</p>
       <p>Location: (I)</p>
+      <p>School: Kingswood High School</p>
       <p>Notes: Engages in Chess Tournaments, more is unknown. Aliases: PappierNaw, pappiernawlikeskale </p>
       <br>
       <p>First Name: John</p>
@@ -48,6 +49,7 @@
       <p>Email: 444049766@kingswoodhs.nsw.edu.au</p>
       <p>Personal Email: (I)/p>
       <p>Location: 17 Santly Crescent, NSW, AUS (?)</p>
+      <p>School: Kingswood High School</p>
       <p>Notes: Engages in Cricket Tournaments, (/). Alias: _superkog432</p>
       <br>
       <p>First Name: Matthew</p>
@@ -58,6 +60,7 @@
       <p>Email: 450088633@kingswoodhs.nsw.edu.au</p>
       <p>Personal Email: (I)</p>
       <p>Location: (I)</p>
+      <p>School: Kingswood High School</p>
       <p>Notes: Not much is known. Alias: justs0m3guy </p>
       <br>
       <p>First Name: Zane</p>
@@ -68,6 +71,7 @@
       <p>Email: 443516620@kingswoodhs.nsw.edu.au</p>
       <p>Personal Email: (I)</p>
       <p>Location: (I)</p>
+      <p>School: Kingswood High School</p>
       <p>Notes: Not much is known. Alias: Cyphox</p>
       <br>
       <p>First Name: Atley</p>
@@ -78,6 +82,7 @@
       <p>Email: 443411445@kingswoodhs.nsw.edu.au</p>
       <p>Personal Email: (I)</p>
       <p>Location: (I)</p>
+      <p>School: Kingswood High School</p>
       <p>Notes: Not much is known. Aliases are unkown</p>
     </div>
     <div id="yr10jhs">
@@ -92,7 +97,47 @@
       <p>Email: (I)</p>
       <p>Personal Email: jake.morson07@gmail.com</p>
       <p>Location: South Penrith (/)</p>
+      <p>School: Jamison High School</p>
       <p>Notes: Not much is known. Aliases: doomslayer, The_Medic_Buster</p>
+      <br>
+      <p>First Name: Benjamin</p>
+      <p>Last Name: Blakey</p>
+      <p>Year: 10</p>
+      <p>DOB: (I)</p>
+      <p>Phone Number: (I)</p>
+      <p>Email:</p>
+      <p>Personal Email: bennytheminecraftboy@gmail.com </p>
+      <p>Location: 16 Penrose Crescent</p>
+      <p>School: Jamison High School</p>
+      <p>Notes: Has a casual job at an undisclosed McDonald's. Aliases: JefforLife, BigHead Man</p>
+      <br>
+      <p>First Name: Aaron</p>
+      <p>Last Name: Hart</p>
+      <p>Year: 10</p>
+      <p>DOB: October 2007 (/)</p>
+      <p>Phone Number: 04808 185 679 (?)</p>
+      <p>Email: aaron.hart5@education.gov.nsw.au</p>
+      <p>Personal Email: (I)</p>
+      <p>Location: 14 Westmont Drive</p>
+      <p>School: Jamison High School</p>
+      <p>Notes: Engages in Soccer tournaments. Has a casual job at an unkown Woolworths. Aliases: ___zaps, zaps</p>
+      <br>
+      
+    </div>
+    <div id="Otheryr10">
+      <br>
+      <h4>Year 10 Other</h4>
+      <br>
+      <p>First Name: Darcy</p>
+      <p>Last Name: Kenny</p>
+      <p>Year: 10</p>
+      <p>DOB: 28/08/2007</p>
+      <p>Phone Number: (I)</p>
+      <p>Email: (I)</p>
+      <p>Personal Email: darcykenny1@gmail.com </p>
+      <p>Location: 26 or 13 Wascoe Street (/)</p>
+      <p>School: Blaxland High School (/) </p>
+      <p>Notes: Not much is known. Aliases: homlesperson, Homelessperson, Moss_cow</p>
     </div>
 
   </div>
