--- a/$57987574573498774343/rpsidb.html
+++ b/$57987574573498774343/rpsidb.html
@@ -38,6 +38,7 @@
       <p>Email: 443465731@kingswoodhs.nsw.edu.au </p>
       <p>Personal Email: christiansaboungi0@gmail.com</p>
       <p>Location: (I)</p>
+      <p>Is Email Leaked?: </p>
       <p>School: Kingswood High School</p>
       <p>Notes: Engages in Chess Tournaments, more is unknown. Aliases: PappierNaw, pappiernawlikeskale </p>
       <br>
@@ -48,7 +49,7 @@
       <p>Phone Number: N/A</p>
       <p>Email: 444049766@kingswoodhs.nsw.edu.au</p>
       <p>Personal Email: (I)/p>
-      <p>Location: 17 Santly Crescent, NSW, AUS (?)</p>
+      <p>Location: 17 Santly Crescent, NSW, AUS (?) </p>
       <p>School: Kingswood High School</p>
       <p>Notes: Engages in Cricket Tournaments, (/). Alias: _superkog432</p>
       <br>
@@ -136,6 +137,7 @@
       <p>Email: (I)</p>
       <p>Personal Email: darcykenny1@gmail.com </p>
       <p>Location: 26 or 13 Wascoe Street (/)</p>
+      <p>Is Email Leaked?: No</p>
       <p>School: Blaxland High School (/) </p>
       <p>Notes: Not much is known. Aliases: homlesperson, Homelessperson, Moss_cow</p>
     </div>
