--- a/$57987574573498774343/rpsidb.html
+++ b/$57987574573498774343/rpsidb.html
@@ -38,7 +38,7 @@
       <p>Email: 443465731@kingswoodhs.nsw.edu.au </p>
       <p>Personal Email: christiansaboungi0@gmail.com</p>
       <p>Location: (I)</p>
-      <p>Is Email Leaked?: </p>
+      <p>Is Email Leaked?: No</p>
       <p>School: Kingswood High School</p>
       <p>Notes: Engages in Chess Tournaments, more is unknown. Aliases: PappierNaw, pappiernawlikeskale </p>
       <br>
@@ -50,6 +50,7 @@
       <p>Email: 444049766@kingswoodhs.nsw.edu.au</p>
       <p>Personal Email: (I)/p>
       <p>Location: 17 Santly Crescent, NSW, AUS (?) </p>
+      <p>Is Email Leaked?: (I)</p>
       <p>School: Kingswood High School</p>
       <p>Notes: Engages in Cricket Tournaments, (/). Alias: _superkog432</p>
       <br>
@@ -61,6 +62,7 @@
       <p>Email: 450088633@kingswoodhs.nsw.edu.au</p>
       <p>Personal Email: (I)</p>
       <p>Location: (I)</p>
+      <p>Is Email Leaked?: (I)</p>
       <p>School: Kingswood High School</p>
       <p>Notes: Not much is known. Alias: justs0m3guy </p>
       <br>
@@ -72,6 +74,7 @@
       <p>Email: 443516620@kingswoodhs.nsw.edu.au</p>
       <p>Personal Email: (I)</p>
       <p>Location: (I)</p>
+      <p>Is Email Leaked?: (I)</p>
       <p>School: Kingswood High School</p>
       <p>Notes: Not much is known. Alias: Cyphox</p>
       <br>
@@ -83,6 +86,7 @@
       <p>Email: 443411445@kingswoodhs.nsw.edu.au</p>
       <p>Personal Email: (I)</p>
       <p>Location: (I)</p>
+      <p>Is Email Leaked?: (I)</p>
       <p>School: Kingswood High School</p>
       <p>Notes: Not much is known. Aliases are unkown</p>
     </div>
@@ -98,6 +102,7 @@
       <p>Email: (I)</p>
       <p>Personal Email: jake.morson07@gmail.com</p>
       <p>Location: South Penrith (/)</p>
+      <p>Is Email Leaked?: No</p>
       <p>School: Jamison High School</p>
       <p>Notes: Not much is known. Aliases: doomslayer, The_Medic_Buster</p>
       <br>
@@ -109,6 +114,7 @@
       <p>Email:</p>
       <p>Personal Email: bennytheminecraftboy@gmail.com </p>
       <p>Location: 16 Penrose Crescent</p>
+      <p>Is Email Leaked?: No</p>
       <p>School: Jamison High School</p>
       <p>Notes: Has a casual job at an undisclosed McDonald's. Aliases: JefforLife, BigHead Man</p>
       <br>
@@ -120,6 +126,7 @@
       <p>Email: aaron.hart5@education.gov.nsw.au</p>
       <p>Personal Email: (I)</p>
       <p>Location: 14 Westmont Drive</p>
+      <p>Is Email Leaked?: (I)</p>
       <p>School: Jamison High School</p>
       <p>Notes: Engages in Soccer tournaments. Has a casual job at an unkown Woolworths. Aliases: ___zaps, zaps</p>
       <br>
