--- a/$57987574573498774343/rpsidb.html
+++ b/$57987574573498774343/rpsidb.html
@@ -140,12 +140,12 @@
       <p>Last Name: Kenny</p>
       <p>Year: 10</p>
       <p>DOB: 28/08/2007</p>
-      <p>Phone Number: (I)</p>
-      <p>Email: (I)</p>
+      <p>Phone Number: 0432 524 005</p>
+      <p>Email: darcy.kenny@education.nsw.gov.au</p>
       <p>Personal Email: darcykenny1@gmail.com </p>
-      <p>Location: 26 or 13 Wascoe Street (/)</p>
+      <p>Location: 13 Wascoe Street</p>
       <p>Is Email Leaked?: No</p>
-      <p>School: Blaxland High School (/) </p>
+      <p>School: Blaxland High School</p>
       <p>Notes: Not much is known. Aliases: homlesperson, Homelessperson, Moss_cow</p>
     </div>
 
