--- a/$57987574573498774343/rpsidb.html
+++ b/$57987574573498774343/rpsidb.html
@@ -138,13 +138,13 @@
       <h4>Year 10 Other</h4>
       <br>
       <p>First Name: Darcy</p>
-      <p>Last Name: Kenny</p>
+      <p>Last Name: *** </p>
       <p>Year: 10</p>
-      <p>DOB: 28/08/2007</p>
-      <p>Phone Number: 0432 524 005</p>
-      <p>Email: darcy.kenny@education.nsw.gov.au</p>
-      <p>Personal Email: darcykenny1@gmail.com </p>
-      <p>Location: 13 Wascoe Street</p>
+      <p>DOB: 2007</p>
+      <p>Phone Number: *** </p>
+      <p>Email: ***</p>
+      <p>Personal Email: *** Undisclosed</p>
+      <p>Location: *** </p>
       <p>Is Email Leaked?: No</p>
       <p>School: Blaxland High School</p>
       <p>Notes: Not much is known. Aliases: homlesperson, Homelessperson, Moss_cow</p>
