--- a/$57987574573498774343/urpsidb.html
+++ b/$57987574573498774343/urpsidb.html
@@ -148,6 +148,19 @@
       <p>Is Email Leaked?: No</p>
       <p>School: Blaxland High School</p>
       <p>Notes: Not much is known. Aliases: homlesperson, Homelessperson, Moss_cow</p>
+      <br>
+      <p>First Name: Cris</p>
+      <p>Last Name: (I) </p>
+      <p>Year: 10</p>
+      <p>DOB: (I)</p>
+      <p>Phone Number: (I)</p>
+      <p>Email: (I) </p>
+      <p>Personal Email: (I) </p>
+      <p>Location: (I)</p>
+      <p>Is Email Leaked?: (I)</p>
+      <p>School: Blaxland High School</p>
+      <p>Notes: Not much is known. Aliases: CrazyCrisss</p>
+      
     </div>
 
   </div>
