--- a/$57987574573498774343/urpsidb.html
+++ b/$57987574573498774343/urpsidb.html
@@ -118,6 +118,7 @@
       <p>Is Email Leaked?: No</p>
       <p>School: Jamison High School</p>
       <p>Notes: Has a casual job at an undisclosed McDonald's. Aliases: JefforLife, BigHead Man</p>
+      <p>Accounts: Reddit; https://www.reddit.com/user/Jefforlife/ Youtube; https://www.youtube.com/channel/UCa1nWwVZHbwpZIAwji_mIdg Cheat Engine; https://www.cheatengine.org/forum/profile.php?mode=viewprofile&u=549342&sid=80dbf243a6f735f9d18c7f3391bb9e50</p>
       <br>
       <p>First Name: Aaron</p>
       <p>Last Name: Hart</p>
